Bug 1229278 - Fix dynamic changes to text-emphasis-style. r=dbaron